--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Vinodkumar Thangaraju - Resume</title>
+    <title>Abirama Sundaram - Resume</title>
 </head>
 <body>
     <img src="./assets/images/abirama-sundaram.png" alt="abirama-sundaram-passport-size-photo" width="248px" height="248px">
