--- a/public/contact.html
+++ b/public/contact.html
@@ -12,5 +12,6 @@
         2/10, Irumbai Road,Thiruchitrambalam (PO), <br>
         Vanur (TK),Villupuram (Dist),Tamil Nadu, India - 605 111
     </address>
+    <a href="../index.html">Back to Home</a>
 </body>
 </html>
